--- a/css/main.css
+++ b/css/main.css
@@ -85,11 +85,43 @@ a {
   animation: right-move 0.5s linear forwards;
   z-index: -1;
 }
+.spikes {
+  position: relative;
+}
 
+.spikes::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 30px;
+  z-index: 1;
+  background-image: linear-gradient(135deg, white 25%, transparent 25%),
+    linear-gradient(225deg, white 25%, transparent 25%);
+  background-size: 30px 30px;
+}
+
+.dots {
+  height: 186px;
+  width: 204px;
+  background-image: url(../images/dots.png);
+  background-repeat: no-repeat;
+}
+.dots-left {
+  position: absolute;
+  left: 0;
+  top: 200px;
+}
+.dots-right {
+  position: absolute;
+  bottom: 200px;
+  right: 0;
+}
 /* end copomponents */
 /* start header */
 .header {
   background-color: #fff;
+  box-shadow: 1px 10px 15px #bebebe;
 }
 .header .container {
   display: flex;
@@ -111,7 +143,10 @@ a {
   justify-content: space-between;
   align-items: center;
 }
-
+.header .main-nav > li:hover .mega-menu {
+  opacity: 1;
+  z-index: 100;
+}
 .header .main-nav > li > a {
   display: block;
   padding: 0 30px;
@@ -142,12 +177,87 @@ a {
 .header .main-nav > li > a:hover::before {
   width: 100%;
 }
+.header .mega-menu {
+  z-index: -1;
+  display: flex;
+  background-color: white;
+  position: absolute;
+  width: 90%;
+  left: 50%;
+  top: 73px;
+  transform: translateX(-50%);
+  border-bottom: 2px solid var(--main-color);
+  padding: 20px;
+  opacity: 0;
+}
+@media (max-width: 991px) {
+  .header .mega-menu {
+    width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .header .mega-menu {
+    flex-direction: column;
+  }
+}
+.mega-menu .image {
+  flex-basis: 50%;
+}
+@media (max-width: 991px) {
+  .mega-menu .image {
+    display: none;
+  }
+}
+.mega-menu .image img {
+  max-width: 100%;
+}
+.mega-menu ul {
+  flex: 1;
+}
+.mega-menu ul:first-of-type {
+  margin-right: 20px;
+}
+.mega-menu ul > li {
+  padding: 15px;
+  min-width: 220px;
+  position: relative;
+  z-index: 1;
+}
+.mega-menu ul > li::before {
+  content: "";
+  position: absolute;
+  background-color: #fafafa;
+  width: 0;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transition: var(--main-transition);
+  z-index: -1;
+}
+.mega-menu ul > li:hover::before {
+  width: 100%;
+}
+.mega-menu ul > li:not(:last-child) {
+  border-bottom: 1px solid #ececec;
+}
+@media (max-width: 767px) {
+  .mega-menu ul:first-of-type > li:last-child {
+    border-bottom: 1px solid #ececec;
+  }
+}
+.mega-menu ul > li a {
+  color: var(--main-color);
+  font-size: 18px;
+  font-weight: bold;
+}
+.mega-menu ul > li a i {
+  margin-right: 10px;
+}
 
 /* end header */
 /* start landing */
 .landing {
   position: relative;
-  height: calc(100vh - 76px);
 }
 .landing::before {
   position: absolute;
@@ -163,9 +273,9 @@ a {
 }
 .landing .container {
   display: flex;
-  padding-top: 120px;
+  padding-bottom: 120px;
   align-items: center;
-  position: relative;
+  min-height: calc(100vh - 76px);
 }
 .landing .text {
   flex: 1;
@@ -181,13 +291,20 @@ a {
   color: #666;
   margin: 5px 0 0;
 }
-.landing .image {
+@media (max-width: 991px) {
+  .landing .image {
+    display: none;
+  }
+  .landing .text {
+    text-align: center;
+  }
 }
 .landing img {
   width: 600px;
   position: relative;
   animation: up-and-down 5s linear infinite;
 }
+
 .landing a {
   color: var(--main-color);
   position: absolute;
@@ -250,6 +367,7 @@ a {
   background-color: var(--section-background);
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
+  position: relative;
 }
 .gallery .container {
   display: grid;
@@ -712,6 +830,7 @@ a {
 .events {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
+  position: relative;
 }
 .events .container {
 }
@@ -785,6 +904,7 @@ a {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
   background-color: var(--section-background);
+  position: relative;
 }
 .pricing .container {
   display: grid;
